[gd_scene load_steps=2 format=2]

[ext_resource path="res://core/debug/DebugUI.gd" type="Script" id=1]

[node name="DebugUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 312.0
margin_bottom = 40.0
mouse_filter = 2

[node name="SelectedCellLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 312.0
margin_bottom = 15.0
tab_size = 1
text = "Selected Cell: <x,y>"
fit_content_height = true

[node name="MousePositionLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 312.0
margin_bottom = 34.0
tab_size = 1
text = "Mouse Position: <x,y>"
fit_content_height = true

[node name="MouseGlobalLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 312.0
margin_bottom = 53.0
tab_size = 1
text = "Mouse Position: <x,y>"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 312.0
margin_bottom = 77.0

[node name="Characters" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 89.0
margin_bottom = 20.0

[node name="Convictions" type="OptionButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 93.0
margin_right = 189.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 193.0
margin_right = 240.0
margin_bottom = 20.0
text = "Learn"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 312.0
margin_bottom = 101.0

[node name="Characters" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_right = 29.0
margin_bottom = 20.0

[node name="Convictions" type="OptionButton" parent="VBoxContainer/HBoxContainer2"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 20.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 66.0
margin_right = 113.0
margin_bottom = 20.0
text = "Equip"
